--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="card-header">My info</div>
             <div class="card-body">
                 <p class="card-text">
-                    <img src="images/profile.jpg" alt="홍길동의 얼굴 사진" />
+                    <img src="cssreport/images/profile.jpg" alt="홍길동의 얼굴 사진" />
                 <table>
                     <tbody>
                         <tr id="myname">
@@ -99,7 +99,7 @@
                             <div>
                                 <div class="uk-card uk-card-secondary uk-card-body">
                                     <h3 class="uk-card-title">재밌는 앱</h3>
-                                    <video src="movie.mp4" controls></video>
+                                    <video src="cssreport/movie.mp4" controls></video>
                                     <p>Integer imperdiet accumsan dui eget imperdiet. Nulla cursus sed metus posuere
                                         fringilla.</p>
                                     <div class="card-action">
